bookmyshowapp-k8s/bookmyshowapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmyshowapp-ingress
  namespace: bookmyshow-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bookmyshowapp.v4c.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookmyshowapp-service
            port:
              number: 3000
